--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author: "Ben Dietzkis"
 
 ppurl: "http://viewdidappear.github.io/viewDidAppear/pp.html"
 url: "http://viewdidappear.github.io"
-baseurl: ""
+# baseurl: ""
 
 # Social Accounts
 
