--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Title of your blog; shows in the header
-title: Hi
+title: Hi there
 description: A modern personal profile
 markdown: kramdown
 theme: null
